# InputTester

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/qtKeyLog/: keyboardView.cpp  keyboardView.h  layoutParser.cpp  layoutParser.h  qtKeyLog.cpp
include/inputtester/core/: inputEvent.h  inputEventQueue.h  inputEventSink.h  spscRingBuffer.h
include/inputtester/platform/: inputBackend.h
layouts/ansi_full/: ansi_full_kle.json  ansi_full_mapping.json
layouts/ansi_tkl/: ansi_tkl_kle.json  ansi_tkl_mapping.json
resources/: inputtester.qrc  linux_keymap.json
resources/linux/: InputTester.desktop
resources/windows/: InputTester.rc
scripts/: build-linux.sh  build-win.ps1
src/platform/linux/: linuxInputBackend.cpp  linuxKeymapParser.cpp  linuxKeymapParser.h
src/platform/win/: winInputBackend.cpp
tests/: layoutParserTests.cpp  linuxKeymapTests.cpp  spscBench.cpp  spscRingBufferAdapter.h
